--- a/style.css
+++ b/style.css
@@ -4,12 +4,18 @@
 }
 
 body {
-  background-color: hsl(240, 78%, 98%);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(246, 246, 254);
   font: 700 15px "Montserrat";
 }
 
+button {
+  cursor: pointer;
+}
+
 .c-primary {
-  background-color: linear-gradient(
+  background: linear-gradient(
     90deg,
     hsl(236, 72%, 79%) 0%,
     hsl(237, 63%, 64%) 100%
@@ -26,4 +32,235 @@ body {
 
 .c-dark-gray {
   color: hsl(232, 13%, 33%);
+}
+
+.bg-top {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.bg-bottom {
+  position: absolute;
+  bottom: 0;
+}
+
+.hidden {
+  display: none !important;
+}
+
+/* toggle */
+.toggle-round {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.toggle-round input {
+  display: none;
+}
+
+.toggle-round span {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  background: linear-gradient(
+    90deg,
+    hsl(236, 72%, 79%) 0%,
+    hsl(237, 63%, 64%) 100%
+  );
+}
+
+.toggle-round span:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + span {
+  opacity: 0.5;
+}
+
+input:checked + span:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.toggle-round span {
+  border-radius: 34px;
+}
+
+.toggle-round span:before {
+  border-radius: 50%;
+}
+
+/* Header */
+.title {
+  font-weight: 600;
+  font-size: 33px;
+  text-align: center;
+  margin: 70px 0 45px 0;
+}
+
+.toggle {
+  margin: 0 auto 72px auto;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 220px;
+}
+
+.toggle label {
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 18px;
+  letter-spacing: 0.02em;
+}
+
+/* Plans */
+.plans {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 1050px;
+  margin: auto;
+  position: absolute;
+  right: 0;
+  left: 0;
+}
+
+.plan-item {
+  width: 350px;
+  padding: 30px 30px 0 30px;
+  box-shadow: 5px 4px 16px hsl(236, 49%, 90%);
+  border-radius: 8px;
+  background-color: #fff;
+}
+
+.plan-item button {
+  width: 100%;
+  height: 45px;
+  text-align: center;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 18px;
+  color: #fff;
+  border: none;
+  border-radius: 6px;
+  text-transform: uppercase;
+  margin-top: 33px;
+}
+
+.plan-item button:hover {
+  background: #fff;
+  color: hsl(237, 63%, 64%);
+  border: 1px solid hsl(237, 63%, 64%);
+}
+
+.plans .basic,
+.plans .master {
+  height: 420px;
+}
+
+.plans .basic p,
+.plans .master p {
+  color: hsl(232, 13%, 33%);
+}
+
+.plans .basic h2,
+.plans .master h2,
+.plans .professional h2 {
+  font-weight: 500;
+  font-size: 19px;
+  line-height: 23px;
+  text-align: center;
+  color: hsl(233, 13%, 49%);
+}
+
+.plans .basic p,
+.plans .master p,
+.plans .professional p {
+  padding: 16px 0;
+  text-align: center;
+  border-bottom: 1px solid #cdcdcd;
+  color: hsl(233, 13%, 49%);
+}
+
+.plans .basic .value,
+.plans .master .value,
+.plans .professional .value {
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 49px;
+  letter-spacing: 0.02em;
+  padding: 20px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: hsl(232, 13%, 33%);
+  border-bottom: 1px solid #cdcdcd;
+}
+
+.plans .basic .value strong,
+.plans .master .value strong,
+.plans .professional .value strong {
+  font-weight: bold;
+  font-size: 70px;
+  line-height: 85px;
+  letter-spacing: -0.02em;
+  margin-left: 5px;
+}
+
+.plans .professional {
+  height: 444px;
+  padding: 56px 30px 0 30px;
+  background-color: hsl(237, 63%, 64%);
+}
+
+.plans .professional h2,
+.plans .professional p {
+  color: #fff !important;
+}
+
+.plans .professional .value,
+.plans .professional p {
+  border-bottom: 1px solid #fff !important;
+}
+
+.plans .professional button {
+  background-color: #fff;
+  color: hsl(237, 63%, 64%);
+}
+
+.plans .professional button:hover {
+  color: #fff;
+  border: 1px solid #fff;
+  background: linear-gradient(
+    90deg,
+    hsl(236, 72%, 79%) 0%,
+    hsl(237, 63%, 64%) 100%
+  );
+}
+
+/* Footer */
+.attribution {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
 }
