--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ input:checked + span:before {
   font-weight: 600;
   font-size: 33px;
   text-align: center;
-  margin: 70px 0 45px 0;
+  margin: 60px 0 45px 0;
 }
 
 .toggle {
@@ -263,13 +263,16 @@ input:checked + span:before {
 .attribution {
   position: absolute;
   bottom: 10px;
+  right: 10px;
   width: 100%;
-  text-align: center;
+  text-align: right;
+  font-size: 10px;
   font-weight: normal;
 }
 
 .attribution a {
   color: hsl(237, 63%, 64%);
+  font-weight: 700;
 }
 
 /* Mediaquery */
